--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -810,7 +810,7 @@ item.mwc_UMP45Receiver.name=UMP45 机匣
 item.mwc_UMP9Receiver.name=UMP9 机匣
 item.mwc_HK416Receiver.name=HK416 机匣
 item.mwc_HK417Receiver.name=HK417 机匣
-item.mwc_HK417ReceiverTan.name=HK417 机匣 (黄褐色)
+item.mwc_HK417ReceiverTan.name=HK417 机匣 (褐色)
 item.mwc_M110Receiver.name=M110 机匣
 item.mwc_Beowulf50CalReceiver.name=Beowulf .50 Cal 机匣
 item.mwc_S710Receiver.name=S7-10 机匣
@@ -827,7 +827,7 @@ item.mwc_KrissVector556Handguard.name=Kriss Vector 5.56x45mm NATO 枪身
 item.mwc_M1CarbineBody.name=M1 步枪枪身
 item.mwc_M1A1CarbineBody.name=M1 [M1A1] 步枪枪身
 item.mwc_M14Body.name=M14 DMR 枪身
-item.mwc_Mk14TanBody.name=Mk14 EBR 枪身 (黄褐色)
+item.mwc_Mk14TanBody.name=Mk14 EBR 枪身 (褐色)
 item.mwc_Mk14SnowBody.name=Mk14 EBR 枪身 (北极)
 item.mwc_Mk14BlackBody.name=Mk14 EBR 枪身
 item.mwc_SamuraiEdgeBody.name=M9A1 武士之刃枪身
@@ -839,11 +839,11 @@ item.mwc_Remington700APACChassis.name=Remington-700 APAC 枪身
 item.mwc_Remington700MDTXRSChassis.name=Remington-700 MDTXRS 枪身
 item.mwc_ARX160Chassis.name=ARX-160 枪身
 item.mwc_ARX160ChassisOlive.name=ARX-160 枪身(黄绿色)
-item.mwc_ARX160ChassisTan.name=ARX-160 枪身(黄褐色)
+item.mwc_ARX160ChassisTan.name=ARX-160 枪身(褐色)
 item.mwc_M14DMRSocomChassis.name=M14 DMR 特战枪身
 item.mwc_MAC10Body.name=MAC-10 枪身
 item.mwc_SCCYCPX2Body.name=CPX-2 枪身
-item.mwc_SCCYCPX2BodyTan.name=CPX-2 枪身(黄褐色)
+item.mwc_SCCYCPX2BodyTan.name=CPX-2 枪身(褐色)
 item.mwc_MakarovPBBody.name=PB 枪身
 item.mwc_MakarovBody.name=PM 枪身
 item.mwc_MAC10Action.name=MAC-10 枪身
@@ -878,7 +878,7 @@ item.mwc_MakarovPMSlide.name=PM 套筒
 item.mwc_MakarovPBSlide.name=PB 套筒
 item.mwc_MP443Slide.name=MP443 套筒
 
-item.mwc_FMGcarryhandle.name=FMG-9 提把
+item.mwc_fmg9Gcarryhandle.name=FMG-9 提把
 item.mwc_AR15Iron.name=AR 提把
 
 item.mwc_Bipod.name=脚架
