Add tan Molle lang

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -83,7 +83,7 @@ item.mwc_f5_switchblade_backpack.name=F5 Switchblade Backpack
 
 item.mwc_duffle_bag.name=Duffle Bag
 
-item.mwc_flyye_field_compact_plate_carrier.name=Molle Plate Carrier
+item.mwc_molle_tan.name=Molle Plate Carrier (Tan)
 item.mwc_molle_black.name=Molle Plate Carrier (Black)
 item.mwc_molle_green.name=Molle Plate Carrier (Green)
 item.mwc_molle_urban.name=Molle Plate Carrier (Urban)
