--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1072,7 +1072,7 @@ gui.currentZoom=Zoom: %s%%
 gui.grenadeExplodes=Explodes in %s sec
 gui.coolingDown=Cooling down...
 
-config.category.ores.name=Ores Config
+config.category.ores.name=Ores
 config.ores.sulfurSpawnsPerChunk.property.name=Sulfur Ore Per Chunk
 config.ores.sulfurSpawnsPerChunk.property.tooltip=The amount of Sulfur Ore spawned per chunk.
 config.ores.copperSpawnsPerChunk.property.name=Copper Ore Per Chunk
@@ -1084,7 +1084,7 @@ config.ores.leadSpawnsPerChunk.property.tooltip=The amount of Lead Ore spawned p
 config.ores.graphiteSpawnsPerChunk.property.name=Graphite Ore Per Chunk
 config.ores.graphiteSpawnsPerChunk.property.tooltip=The amount of Graphite Ore spawned per chunk.
 
-config.category.gameplay.name=Gameplay Config
+config.category.gameplay.name=Gameplay
 config.gameplay.enableAmmoCounter.property.name=Ammo Counter
 config.gameplay.enableAmmoCounter.property.tooltip=Enable/Disable the Ammo Counter
 config.gameplay.ammoCounterX.property.name=Ammo Counter X
@@ -1115,8 +1115,8 @@ config.gameplay.explodedBlockDropChance.property.tooltip=The chance for blocks t
 config.gameplay.statusBarPosition.property.name=Status Bar Position
 config.gameplay.statusBarPosition.property.tooltip=The screen position for the Status Bar
 
-config.category.entities.name=Entities Config
-config.category.rendering.name=Rendering Config
+config.category.entities.name=Entities
+config.category.rendering.name=Rendering
 config.category.rendering.tooltip=Rendering/Shaders
 config.category.screenshaders.name=Screen Shaders Config
 config.category.screenshaders.tooltip=Screen Shaders
