--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1118,7 +1118,7 @@ config.gameplay.statusBarPosition.property.tooltip=The screen position for the S
 config.category.entities.name=Entities
 config.category.rendering.name=Rendering
 config.category.rendering.tooltip=Rendering/Shaders
-config.category.screenshaders.name=Screen Shaders Config
+config.category.screenshaders.name=Screen Shaders
 config.category.screenshaders.tooltip=Screen Shaders
 config.rendering.enableAllShaders.property.name=Enable All Shaders
 config.rendering.enableAllShaders.property.tooltip=Enable All Shaders
