--- a/src/main/resources/assets/mwc/lang/en_us.json
+++ b/src/main/resources/assets/mwc/lang/en_us.json
@@ -46,5 +46,8 @@
   "item.mwc.lens": "Lens",
   "item.mwc.empty_syringe": "Empty Syringe",
   "item.mwc.stimpak": "Stimpak",
-  "itemGroup.mwc.basetab": "MWC"
+  "itemGroup.mwc.basetab": "MWC",
+
+  "key.mwc.openconfig": "Opening Config",
+  "key.mwc.closeconfig": "Closing Config",
 }
