--- a/src/main/resources/assets/mwc/lang/en_us.json
+++ b/src/main/resources/assets/mwc/lang/en_us.json
@@ -47,7 +47,6 @@
   "item.mwc.empty_syringe": "Empty Syringe",
   "item.mwc.stimpak": "Stimpak",
   "itemGroup.mwc.basetab": "MWC",
-
-  "key.mwc.openconfig": "Opening Config",
-  "key.mwc.closeconfig": "Closing Config",
+  "key.mwc.openconfig": "Open Configuration GUI",
+  "key.mwc.closeconfig": "Close Configuration GUI"
 }
