--- a/src/main/resources/assets/mwc/lang/ko_KR.lang
+++ b/src/main/resources/assets/mwc/lang/ko_KR.lang
@@ -1040,7 +1040,7 @@ key.silencer=총열 변경
 key.laser=표적지시기 조작
 key.add=확대
 key.subtract=축소
-key.inspect=화기 검사
+key.inspect=화기 점검
 key.nightVision=야간투시경
 key.opendoor=문 열기
 key.proning=엎드리기
